--- a/Download.html
+++ b/Download.html
@@ -93,7 +93,7 @@
           <td>Windows</td><td>exe</td><td>Streamlink-1.0.1β.exe</td><td>Suspended</td>
         </tr>
         <tr>
-          <td>Windows</td><td>zip</td><td>Streamlink-1.0.1β.zip</td><td><a href="Streamlink-1.0.1β.zip">Download</a></td>
+          <td>Windows</td><td>zip</td><td>Streamlink-1.0.1β.zip</td><td><a href="https://ux.getuploader.com/STREAMLINK/download/1">Download</a></td>
         </tr>
       </table>
       </section>
